test/parser/reject/empty-optional.rule
# expected: E1200
rule group = ( )?;